# shortcut-learning

./: .gitignore  README.md  V2_ARCHITECTURE.md  V2_SUMMARY.md  config.json  debug_single_failure.py  debug_skill_failures.py  pyproject.toml  test_obstacle_tower.py  test_v2_multi.py
experiments/: PAPER_COMPARISON.md  SLAP_V2_EXPERIMENTS.md  monitor_aggressive.sh  outputs  run_multi_slap_experiment.slurm  run_original_slap_experiment.slurm  run_original_slap_obstacle2d.slurm  run_pure_plan_experiment.slurm  run_pure_rl_experiment.slurm  run_single_experiment.py  run_slap_experiment.slurm  run_slap_v2_aggressive_experiment.slurm  run_slap_v2_experiment.slurm  test_slap_v2_config.py
experiments/conf/: config.yaml
experiments/conf/approach/: default.yaml  pure_rl.yaml  random.yaml
experiments/conf/collection/: default.yaml
experiments/conf/evaluation/: default.yaml
experiments/conf/policy/: default.yaml
experiments/conf/system/: obstacle2d.yaml  obstacle_tower.yaml
experiments/conf/training/: default.yaml
src/shortcut_learning/: configs.py  utils.py
src/shortcut_learning/methods/: base_approach.py  collection.py  collection_v2.py  graph_utils.py  pipeline.py  pure_rl_approach.py  random_approach.py  slap_approach.py  slap_approach_v2.py  training_data.py  wrappers.py
src/shortcut_learning/methods/policies/: base.py  multi_rl_ppo.py  multi_rl_ppo_v2.py  rl_ppo.py
src/shortcut_learning/problems/: base_tamp.py
src/shortcut_learning/problems/obstacle2d/: env.py  obstacle2d_env.py  obstacle2d_system.py  system.py
src/shortcut_learning/problems/obstacle2d_hard/: env.py  system.py
src/shortcut_learning/problems/obstacle_tower/: env.py  system.py
src/shortcut_learning/utils/: gpu_parallel.py  gpu_utils.py
tests/: test_utils.py
tests/methods/: test_collection_v2.py  test_multi_slap_approach.py  test_obstacle_tower_collection.py  test_pure_rl_approach.py  test_random_approach.py  test_random_rollout_pruning.py  test_slap_approach.py  test_slap_approach_v2.py
tests/problems/: test_obstacle2d.py  test_obstacle2d_hard.py  test_obstacle2d_tamp.py  test_obstacle_tower.py
