[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "shortcut_learning"
version = "0.1.0"
description = "Shortcut learning."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
   "matplotlib",
   "seaborn",
   "numpy",
   "scipy",
   "scikit-image",
   "scikit-learn",
   "imageio",
   "pandas",
   "pandas-stubs",
   "hydra-core",
   "omegaconf",
   "moviepy==1.0.3",
   "torch",
   "tqdm",
   "types-tqdm",
   "wandb",
   "cachetools",
   "pybullet==3.2.7",
   "pybullet_helpers@git+https://github.com/tomsilver/pybullet-helpers.git",
   "tomsutils@git+https://github.com/tomsilver/toms-utils.git",
   "tomsgeoms2d@git+https://github.com/tomsilver/toms-geoms-2d.git",
   "task_then_motion_planning@git+https://github.com/tomsilver/task-then-motion-planning.git",
   "relational-structs@git+https://github.com/tomsilver/relational-structs.git",
   "pybullet-blocks@git+https://github.com/tomsilver/pybullet-blocks.git",
   "gymnasium>=1.0.0",
   "stable_baselines3==2.4.0",
   "types-tabulate",
   "pytest (>=8.4.2,<9.0.0)",
   "black (>=25.9.0,<26.0.0)",
   "docformatter (>=1.7.7,<2.0.0)",
   "isort (>=6.1.0,<7.0.0)",
   "ipykernel (>=6.30.1,<7.0.0)",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shortcut_learning = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
src_paths = ["src"]
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
disable_error_code = ["method-assign"]
warn_unreachable = true
exclude = ["venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "scipy.*",
    "skimage.*",
    "assistive_gym.*",
    "pybullet.*",
    "seaborn.*",
    "moviepy.*",
    "sklearn.*",
    "graphviz.*",
    "cachetools.*",
]
ignore_missing_imports = true